layout issues on mobile and tablet fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,7 +211,6 @@ color: #eee;
   border-bottom: 1px solid rgba(255, 255, 255, 0.23);
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.38);
   padding: 0.6rem 0.75rem;
-  margin: 0 -1rem;
   border-radius: 4px;
 }
 
@@ -474,7 +473,7 @@ font-family: var(--font-heading);
 color: #fff;
     font-family: var(--font-heading);
     font-size: 1.5rem;
-    width: 43rem;
+    max-width: 43rem;
 }
 
 .contact_intro {
